# computer_sensors

./: README.md
computer_sensors/: CMakeLists.txt  package.xml
ros_lm_sensors/: CMakeLists.txt  package.xml
ros_lm_sensors/include/ros_lm_sensors/: computer_sensor.h  fan_sensor.h  other_sensor.h  sensor_chip.h  temp_sensor.h
ros_lm_sensors/src/: sensor_chip.cpp  sensor_monitor.cpp
