<?xml version="1.0"?>
<package>
  <name>computer_sensors</name>
  <version>0.0.0</version>
  <description>Metapackage for packages used to read sensors from a computer</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_lm_sensors</run_depend>

  <export>
    <metapackage/>
  </export>
</package>