<?xml version="1.0"?>
<package>
  <name>ros_lm_sensors</name>
  <version>0.0.0</version>
  <description>A package with a node that publishes information from lm_sensors</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>libsensors4-dev</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>libsensors4-dev</run_depend>

  <export>
  </export>
</package>